--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body, html {
 
 .background-container {
     width: 100%;
-    height: 100%;
+    height: 0 auto;
     background-image: url('https://www.pixelstalk.net/wp-content/uploads/images6/Light-Blue-Backgrounds-Free-Download.jpg');
     background-size: cover; /* faz cobrir toda a tela */
     background-position: center; /* Centraliza a imagem */
