--- a/style.css
+++ b/style.css
@@ -16,13 +16,13 @@ body, html {
 .background-container {
     width: 100%;
     height: 0 auto;
-    background-image: url('https://www.pixelstalk.net/wp-content/uploads/images6/Light-Blue-Backgrounds-Free-Download.jpg');
+    background-image: url('Texto\ do\ seu\ parágrafo.png');
     background-size: cover; /* faz cobrir toda a tela */
     background-position: center; /* Centraliza a imagem */
 }
 
 .alcance{
-    max-width: 600px; /* Define a largura máxima */
+    max-width: 500px; /* Define a largura máxima */
     margin: 0 auto; /* Centraliza o elemento */
 }
 
@@ -30,5 +30,15 @@ body, html {
     display: flex;
     justify-content: space-between;
     padding: 20px;
+   
 
 }
+
+.section{
+    height: 70vh;
+    border-bottom: 2px solid;
+    display: flex;
+    justify-content: space-around;
+    padding: 20px 60px;
+}
+
